Tue Jan 26 02:22:45 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htdig/main.cc (main): Fix typo "uncoded_db_compatbile".

Mon Jan 25 19:38:31 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/Configuration(Find): Make error message for missing
	entries conditional to DEBUG symbol. Removes odd error messages
	under normal use.

Sun Jan 24 23:55:57 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htmerge/db.cc, htmerge/docs.cc: Fix comiler errors.
	* htnotify/htnotify.cc: Similar.
	
Sun Jan 24 14:13:37 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htcommon/WordRecord.h (struct WordRecord): Remove member count
	if NO_WORD_COUNT defined.
	* htmerge/db.cc (mergeDB): Remove handling.
	* htmerge/words.cc (mergeWords): Similar.

	* include/htconfig.h.in: Define NO_WORD_COUNT by default.

Sun Jan 24 14:13:37 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc(logSearch): Added fix from Gilles in case
	REMOTE_ADDR is NULL as well.

	* htnotify/htnotify.cc: Fix compiler warnings.

	* htlib/String.cc(indexOf): Use autoconf check for strstr, fix
	compiler warnings.

	* htlib/Configuration.cc(Find): Complain when option is not in the
	list.

	* htdig/HTML.cc(parse): Move declarations out of the loop.
	(parse): Don't add non-word characters to the excerpt if they're
	in the title. Fixes PR #80.
	
Mon Jan 25 02:17:58 1999  Hans-Peter Nilsson  <hp@axis.se>
	
	* htcommon/defaults.cc (defaults): New option
	"uncoded_db_compatible", default true.

	* htcommon/DocumentDB.h (DocumentDB::SetCompatibility): New
	function.
	(DocumentDB::myTryUncoded): New member.

	* htcommon/DocumentDB.cc (Constructor, Add(), operator[],
	Exists(), Delete()):  Handle uncoded URL in database if
	myTryUncoded.

	* htdig/main.cc (main): Call (DocumentDB::)SetCompatibility() with
	option "uncoded_db_compatible".
	* htsearch/Display.cc (Display): Likewise.
	* htnotify/htnotify.cc (main): Likewise.
	* htmerge/docs.cc (convertDocs): Likewise.